--- a/index.html
+++ b/index.html
@@ -29,43 +29,43 @@
       <div class="charts-container">
         <!-- Days spans's ids are numbered from Sunday(with id=0) to saturday (with id=6)-->
         <div class="day" id="mon">
-          <div class="value-bar">$<span></span></div>
+          <div class="value-bar">$<span class="day-amount"></span></div>
           <div class="bar" id="1"></div>
           <span>mon</span>
         </div>
 
         <div class="day" id="tue">
-          <div class="value-bar">$<span></span></div>
+          <div class="value-bar">$<span class="day-amount"></span></div>
           <div class="bar" id="2"></div>
           <span>tue</span>
         </div>
 
         <div class="day" id="wed">
-          <div class="value-bar">$<span></span></div>
+          <div class="value-bar">$<span class="day-amount"></span></div>
           <div class="bar" id="3"></div>
           <span>wed</span>
         </div>
 
         <div class="day" id="thu">
-          <div class="value-bar">$<span></span></div>
+          <div class="value-bar">$<span class="day-amount"></span></div>
           <div class="bar" id="4"></div>
           <span>thu</span>
         </div>
 
         <div class="day" id="fri">
-          <div class="value-bar">$<span></span></div>
+          <div class="value-bar">$<span class="day-amount"></span></div>
           <div class="bar" id="5"></div>
           <span>fri</span>
         </div>
 
         <div class="day" id="sat">
-          <div class="value-bar">$<span></span></div>
+          <div class="value-bar">$<span class="day-amount"></span></div>
           <div class="bar" id="6"></div>
           <span>sat</span>
         </div>
 
         <div class="day" id="sun">
-          <div class="value-bar">$<span></span></div>
+          <div class="value-bar">$<span class="day-amount"></span></div>
           <div class="bar" id="0"></div>
           <span>sun</span>
         </div>
